feat: design callback navigation system